@@ -815,7 +815,7 @@ gimp_draw_tool_draw_handle (GimpDrawTool   *draw_tool,
 /**
  * gimp_draw_tool_draw_corner:
  * @draw_tool:   the #GimpDrawTool
- * @filled:      whether to fill the rectangle
+ * @highlight:
  * @x1:
  * @y1:
  * @x2:
@@ -831,7 +831,7 @@ gimp_draw_tool_draw_handle (GimpDrawTool   *draw_tool,
  **/
 void
 gimp_draw_tool_draw_corner (GimpDrawTool   *draw_tool,
-                            gboolean        filled,
+                            gboolean        highlight,
                             gdouble         x1,
                             gdouble         y1,
                             gdouble         x2,
@@ -855,123 +855,97 @@ gimp_draw_tool_draw_corner (GimpDrawTool   *draw_tool,
   gimp_display_shell_transform_xy (shell, x1, y1, &tx1, &ty1, use_offsets);
   gimp_display_shell_transform_xy (shell, x2, y2, &tx2, &ty2, use_offsets);
 
-  if (filled)
+  switch (anchor)
     {
-      switch (anchor)
-        {
-        case GTK_ANCHOR_CENTER:
-          break;
+    case GTK_ANCHOR_CENTER:
+      break;
 
-        case GTK_ANCHOR_NORTH_WEST:
-          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, TRUE,
-                                      tx1 + 1,       ty1 + 1,
-                                      width - 1,     height - 1);
-          break;
+    case GTK_ANCHOR_NORTH_WEST:
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx1 + 1,         ty1 + height - 1,
+                             tx1 + width - 1, ty1 + height - 1);
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx1 + width - 1, ty1 + 1,
+                             tx1 + width - 1, ty1 + height);
+      break;
 
-        case GTK_ANCHOR_NORTH_EAST:
-          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, TRUE,
-                                      tx2 - width,   ty1 + 1,
-                                      width - 1,     height - 1);
-          break;
+    case GTK_ANCHOR_NORTH_EAST:
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx2 - 2,         ty1 + height - 1,
+                             tx2 - width,     ty1 + height - 1);
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx2 - width,     ty1 + 1,
+                             tx2 - width,     ty1 + height);
+      break;
 
-        case GTK_ANCHOR_SOUTH_WEST:
-          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, TRUE,
-                                      tx1 + 1,       ty2 - height,
-                                      width - 1,     height - 1);
-          break;
+    case GTK_ANCHOR_SOUTH_WEST:
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx1 + 1,         ty2 - height,
+                             tx1 + width - 1, ty2 - height);
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx1 + width - 1, ty2 - height,
+                             tx1 + width - 1, ty2 - 1);
+      break;
 
-        case GTK_ANCHOR_SOUTH_EAST:
-          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, TRUE,
-                                      tx2 - width,   ty2 - height,
-                                      width - 1,     height - 1);
-          break;
+    case GTK_ANCHOR_SOUTH_EAST:
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx2 - 2,         ty2 - height,
+                             tx2 - width,     ty2 - height);
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx2 - width,     ty2 - height,
+                             tx2 - width,     ty2 - 1);
+      break;
 
-        case GTK_ANCHOR_NORTH:
-          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, TRUE,
-                                      tx1 + 1,       ty1 + 1,
-                                      tx2 - tx1 - 2, height - 1);
-          break;
+    case GTK_ANCHOR_NORTH:
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx1 + 1, ty1 + height, tx2 - 1, ty1 + height);
+      break;
 
-        case GTK_ANCHOR_SOUTH:
-          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, TRUE,
-                                      tx1 + 1,       ty2 - height,
-                                      tx2 - tx1 - 2, height - 1);
-          break;
+    case GTK_ANCHOR_SOUTH:
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx1 + 1, ty2 - height, tx2 - 1, ty2 - height);
+      break;
 
-        case GTK_ANCHOR_WEST:
-          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, TRUE,
-                                      tx1 + 1,       ty1 + 1,
-                                      width - 1,     ty2 - ty1 - 2);
-          break;
+    case GTK_ANCHOR_WEST:
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx1 + width, ty1 + 1, tx1 + width, ty2 - 1);
+      break;
 
-        case GTK_ANCHOR_EAST:
-          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, TRUE,
-                                      tx2 + width,   ty1 + 1,
-                                      width - 1,     ty2 - ty1 - 2);
-          break;
-        }
+    case GTK_ANCHOR_EAST:
+      gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
+                             tx2 - width, ty1 + 1, tx2 - width, ty2 - 1);
+      break;
     }
-  else
+
+  if (highlight)
     {
       switch (anchor)
         {
-        case GTK_ANCHOR_CENTER:
-          break;
-
         case GTK_ANCHOR_NORTH_WEST:
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx1 + 1,         ty1 + height - 1,
-                                 tx1 + width - 1, ty1 + height - 1);
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx1 + width - 1, ty1 + 1,
-                                 tx1 + width - 1, ty1 + height);
+          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, FALSE,
+                                      tx1 + 1,         ty1 + 1,
+                                      width - 3,       height - 3);
           break;
 
         case GTK_ANCHOR_NORTH_EAST:
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx2 - 2,         ty1 + height - 1,
-                                 tx2 - width,     ty1 + height - 1);
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx2 - width,     ty1 + 1,
-                                 tx2 - width,     ty1 + height);
+          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, FALSE,
+                                      tx2 - width + 1, ty1 + 1,
+                                      width - 3,       height - 3);
           break;
 
         case GTK_ANCHOR_SOUTH_WEST:
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx1 + 1,         ty2 - height,
-                                 tx1 + width - 1, ty2 - height);
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx1 + width - 1, ty2 - height,
-                                 tx1 + width - 1, ty2 - 1);
+          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, FALSE,
+                                      tx1 + 1,         ty2 - height + 1,
+                                      width - 3,       height - 3);
           break;
 
         case GTK_ANCHOR_SOUTH_EAST:
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx2 - 2,         ty2 - height,
-                                 tx2 - width,     ty2 - height);
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx2 - width,     ty2 - height,
-                                 tx2 - width,     ty2 - 1);
+          gimp_canvas_draw_rectangle (canvas, GIMP_CANVAS_STYLE_XOR, FALSE,
+                                      tx2 - width + 1, ty2 - height + 1,
+                                      width - 3,       height - 3);
           break;
 
-        case GTK_ANCHOR_NORTH:
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx1 + 1, ty1 + height, tx2 - 1, ty1 + height);
-          break;
-
-        case GTK_ANCHOR_SOUTH:
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx1 + 1, ty2 - height, tx2 - 1, ty2 - height);
-          break;
-
-        case GTK_ANCHOR_WEST:
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx1 + width, ty1 + 1, tx1 + width, ty2 - 1);
-          break;
-
-        case GTK_ANCHOR_EAST:
-          gimp_canvas_draw_line (canvas, GIMP_CANVAS_STYLE_XOR,
-                                 tx2 - width, ty1 + 1, tx2 - width, ty2 - 1);
+        default:
           break;
         }
     }
